syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message AvailableBalance {
  string id = 1;
  string student_account_id = 2;
  string amount_uupx = 3;
  string amount_uspx = 4;
}
